feat(backend): add new features in backend ✨
- Divide backend code in websockets and principal backend.

- Add mongo database.

- Add conection to database.

- Add server to conect frontend with backend

- Create the users route to get and post info. to database.

- Hide websockets url in the context (will be changed).

- Update gitignore and create .env files.

--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,13 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev-api": "node --watch principal/index.js"
   },
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.19.2",
+    "mongodb": "^6.10.0",
     "morgan": "1.10.0",
     "socket.io": "4.7.5"
   }
